--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,10 @@
 	<classpathentry exported="true" kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry kind="lib" path="/home/eva/Downloads/timingframework-swing-7.1/lib/timingframework-swing-7.1.jar"/>
+	<classpathentry kind="lib" path="/home/eva/Downloads/commons-lang3-3.1-bin.zip"/>
+	<classpathentry kind="lib" path="/home/eva/Downloads/commons-lang3-3.1/commons-lang3-3.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="/home/eva/Downloads/commons-lang3-3.1/commons-lang3-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="/home/eva/Downloads/commons-lang3-3.1/commons-lang3-3.1-tests.jar"/>
+	<classpathentry kind="lib" path="/home/eva/Downloads/commons-lang3-3.1/commons-lang3-3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
