--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="HECATAEUS/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/ojdbc14.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/sqljdbc4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/collections-generic-4.01.jar"/>
@@ -17,6 +17,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/jung-visualization-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
-	<classpathentry kind="lib" path="commons-lang3-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="commons-lang3-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/pmanousi/git/Hecataeus/jsqlparser-0.7.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
