--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,6 @@
 	<classpathentry exported="true" kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="commons-lang3-3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/pmanousi/git/Hecataeus/jsqlparser-0.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="jsqlparser-0.7.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
