Broke graphs ISA relationship
===== Removed generics from code
== Cleaning EvolutionNode from generics
EvolutionNode<(.*?)> REPLACE WITH EvolutionNode
EvolutionPolicy<EvolutionNode> REPLACE WITH EvolutionPolicy
EvolutionEvent<EvolutionNode> REPLACE WITH EvolutionEvent
- Now we have everywhere just EvolutionNode
- Make Node now return EvolutionEdge instead of E. (E extends
EvolutionEdge)
<V extends EvolutionNode,E extends EvolutionEdge> REPLACE WITH "" (empty
string)
<V extends EvolutionNode, E extends EvolutionEdge> REPLACE WITH ""
(empty string)
<V,E> REPLACE WITH ""
<V, E> REPLACE WITH ""
<E> REPLACE WITH <EvolutionEdge>
<V> REPALCE WITH <EvolutionNode>

(without "", I use them just for clarity)
" V " REPLACE WITH " EvolutionNode "
"(V " REPLACE WITH "(EvolutionNode "
"\tV " REPLACE WITH "\tEvolutionNode "
"(V)" REPLACE WITH ""
"(E " REPLACE WITH "(EvolutionEdge "
" E " REPLACE WITH " EvolutionEdge "
"\tE " REPLACE WITH "\tEvolutionEdge "
"(E)" REPLACE WITH ""

== Removed HecataeusNodeEvents class it is useless.
== Removed HecataeusNodePolicies class it is useless.
== Removed HecataeusClusterMap class it is useless. (HecataeusViewer has
a static public HecataeusClusterMap VAR
and some classes used that VAR for calling .createMap() which was empty.
Removed those references too.)

== Visual will not have addNodes and edges methods. He exists only for
visualization.

== Added observer pattern. EvolutionGraph is observable. VisualGraph is
observer.
-- Observable: Registers observers and notifies them.
-- Observer: When it gets notificated; updates itself.

== Created EvolutionToVisualConverter for converting Evolution to Visual
graph.

• EvolutionGraph
-- Removed SIDGenerator.
-- Removed graphkMap.
-- Removed _defaultPolicyClauses arraylist because it was useless. It
was used only for putting in polices names but none ever read them.
-- Removed getDefaultPolicyDecsriptions() method method which was using
_defaultPolicyClauses.
-- Removed addEdge(E, V, V), because it j

--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry exported="true" kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="commons-lang3-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="jsqlparser-0.7.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
